welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: '(' expected but identifier found.
override def run() {for i <- 1 to 3 {
                        ^PictureMono2:4: error: illegal start of simple expression
}
^PictureMono2:6: error: '(' expected but identifier found.
def run2() { for i <- 1 to 3 {
                 ^PictureMono2:9: error: illegal start of simple expression
}
^