welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {for i <- 1 to 3 {
  run2();gauche();avance(7);droite
}
}

def run2() { for i <- 1 to 3 {
  run1();avance(7)
}
}

def run1() {faireV();faireV();faireV();faireV()}

def marquerSol() {baisseBrosse();leveBrosse()}

def faireV()  {avance();avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();avance();gauche()}